fix linebreaks in previews

--- a/transfersh-web/styles/includes/preview.less
+++ b/transfersh-web/styles/includes/preview.less
@@ -97,6 +97,7 @@ padding: 0px;
 
 #md-preview,{
 	padding-bottom: 30px;
+    white-space: pre-wrap;
 }
 
 
