--- a/transfersh-web/styles/main.css
+++ b/transfersh-web/styles/main.css
@@ -6487,6 +6487,7 @@ html {
 }
 #md-preview {
   padding-bottom: 30px;
+  white-space: pre-wrap;
 }
 video {
   margin: 0 auto;
